# wrath-rs

./: .gitignore  Cargo.toml  docker-compose.yml  readme.md  reset_db.bat  start.sh
.github/workflows/: main.yaml
auth_server/: .env.template  Cargo.toml
auth_server/migrations/: 20200830073445_setup.sql
auth_server/src/: auth.rs  console_input.rs  constants.rs  main.rs  realms.rs  state.rs
auth_server/src/packet/: client.rs  consts.rs  mod.rs  server.rs  utils.rs
databases/dbc/: Cargo.toml
databases/dbc/src/: area_trigger.rs  chr_classes.rs  chr_races.rs  helpers.rs  lib.rs  map.rs
databases/wrath-auth-db/: .env.template  Cargo.toml  sqlx-data.json
databases/wrath-auth-db/.sqlx/: query-03f388501e2f98bd342474b8d7063cb1686300d9e9e8922ab5ea9e223dd69e1f.json  query-334ab8051b3cf07b209ec4e25dc90ca1808440d098fe8d2b2e6a863c9c70b68c.json  query-40ee68a175f4b79246765ee761499cd37cf533afe0f60bde1e181c32760d5b81.json  query-590c162cc01839e5f272f1092abad92c8a1c4162c427eaf1048116be31e76e33.json  query-5d8b8a1f2768459b6e52995b9930db0ffbc759dd61a50afb0f11adb78abc0363.json  query-7f8c147dd937573dadbb183e58b58dd7ee9537384a1dfcbe64ce9c578dd149e6.json  query-81783d8ebc02b344f98f17e8c40ac2da111cdeb3fbec2dbebd7ba6225e07f679.json  query-9e7d2ce3d1f4c9ca794f992200928bfb314647c406163e352293b65a30023068.json  query-af32339bf6b0e40e5ce3a093c2dc5aceec1a1417c7853f328f83945fbb8ef1b1.json  query-b353501e547b18c92eb10cbea2d30b8f5ddb23666b8bfcbfb24d092c05d31270.json  query-b86fad61fba4f22d25aa98d9e48cabe8aef263a240613bb3f4325279798a4277.json  query-d20b46e2103e8dbf8e12650d438bfe6b181b638d0e7e804b806f1018609b92f9.json  query-f671a4abc3062aba7abd256e8c52eeb28cbe674c33ec29608dfbab1ca11ecf0e.json  query-fd25f6aaaa177908fea22a2316eaf5be22ffa0e3305dbaf7e2745f19fa9f0e10.json
databases/wrath-auth-db/migrations/: 20200830073445_setup.sql
databases/wrath-auth-db/src/: lib.rs  structs.rs
databases/wrath-auth-db/src/entity/: account_data.rs  accounts.rs  mod.rs  prelude.rs  realm_characters.rs  realms.rs
databases/wrath-realm-db/: .env.template  Cargo.toml  sqlx-data.json
databases/wrath-realm-db/.sqlx/: query-05309fb26c8a02a7d7d9f0a9b5e43320dd4c5c7c9470d9b6e38937a1eaaad160.json  query-08f8969995d8864ca6124d4614af81c77c5d02673a7bdfb33447a37ff75edd62.json  query-1cad4d1ce6b00beecc7bf1163925d04ce566764fef1a0b8a164b6be1ffd5c4fb.json  query-331c2482e6fa4016998b49314baa164cbe2d9e065fd95d66ec551695a62f82a3.json  query-5543764e4fd526c7b31a6b745283a004c953bb58922a06e359985b74d5745737.json  query-76a4b4334096ed5f3f058256ace8451652348754dc607ae6587a3bb35d700b4c.json  query-7727f116b9bdf05241934320a897df9df42977658f1b913b6abd5b1ebeaa1067.json  query-7ef3f0af294f0fc628d0f54277c7405497e27187f2e94d1eb903d0d948635a52.json  query-843e08c27c8f7c7d8c1cea15b63a4d8e6037f5aeb106da27e6672a55aeb62a3b.json  query-87d6300eaffe714b226ed726bc28b145bdb83219ec6bac26b194a2d5200f89ed.json  query-943e7644ad38c56a545f477880c41ceb47a75d9e6f1c33274e29ca5459bd9eaf.json  query-b78958c68e8db6a764f6b346420a7e145355106b0231685143fa88269d54a74b.json  query-bfb5c1499aeb4de645474f204fe270f9c3bf0f539636e8263f6ea4620e6e507f.json  query-d4117539374f2598bbbafab18bc9b0e546075107450a18b1997a54fa9e03a618.json  query-d7ef417a34c2cb4edf8687f4ae7533add988b347a5f8d23c05c4252e82af5170.json  query-d9ef663097753896f2bd4c608648a780e655d1a62e58fdccff3c1887b7b54d2b.json  query-f0c97c326d35935aa415892389a8713cbde3edb9254bb9871fece8bda1243e61.json
databases/wrath-realm-db/migrations/: 20200919183322_setup.sql  20220417183446_seed_playercreateinfo.sql  20220501123629_seed_areatriggers.sql
databases/wrath-realm-db/src/: areatrigger_restedzone.rs  areatrigger_teleport.rs  character.rs  character_account_data.rs  character_equipment.rs  item_instance.rs  item_template.rs  lib.rs  player_create_info.rs
docker/: docker-setup.sh
migrations/: 20200830073445_setup.sql
src/: auth.rs  constants.rs  main.rs
world_server/: .env.template  .gitignore  Cargo.toml  ]  rustfmt.toml
world_server/src/: auth.rs  auth_database.rs  character.rs  client.rs  client_manager.rs  console_input.rs  data_types.rs  guid.rs  main.rs  opcodes.rs  packet.rs  packet_handler.rs  realm_socket.rs  wowcrypto.rs
world_server/src/character/: character_cinematic.rs  character_database.rs  character_equipment.rs  character_first_login.rs  character_inventory.rs  character_logout.rs  character_movement.rs  character_rested.rs  mod.rs
world_server/src/constants/: cinematic.rs  factions.rs  inventory.rs  mod.rs  social.rs  stand_state.rs  unit_fields.rs  unit_flags.rs  updates.rs
world_server/src/data/: action_bar.rs  character_inventory.rs  data_storage.rs  guid.rs  mod.rs  movement_info.rs  packed_time.rs  tutorial_flags.rs
world_server/src/data/data_storage/: area_triggers.rs  mod.rs
world_server/src/data_types/: action_bar.rs  mod.rs  movement_info.rs  packed_time.rs  tutorial_flags.rs
world_server/src/handlers/: account_data_handler.rs  bars_buttons_handler.rs  character_handler.rs  cinematics_handler.rs  equipment_handler.rs  faction_handler.rs  gm_handler.rs  group_handler.rs  instance_handler.rs  login_handler.rs  mod.rs  movement_handler.rs  queries_handler.rs  social_handler.rs  spell_handler.rs  talent_handler.rs  tutorial_handler.rs  update_handler.rs  voice_chat_handler.rs  world_handler.rs
world_server/src/item/: item_container.rs  item_database.rs  mod.rs
world_server/src/updates/: constants.rs  mod.rs  update_data.rs
world_server/src/world/: character_value_fields.rs  character_value_helpers.rs  game_object.rs  instance_manager.rs  item_value_helpers.rs  map_cell.rs  map_manager.rs  map_object.rs  mod.rs  unit_value_helpers.rs  update_builder.rs  value_fields.rs
