[package]
name = "wrath"
version = "0.1.0"
authors = ["victov <victor.veldstra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wow_srp = '0.3.0'
byteorder = { version = '1' }
async-std = { version = "*", features = ["attributes"] }
anyhow = { version = "*" }
dotenv = { version = "*" }
hex = { version = "0.4" }
wrath-auth-db = { path = "../databases/wrath-auth-db" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
async-trait = "0.1"
byte = "0.2"