[package]
name = "wrath-authserver"
version = "0.1.0"
authors = ["victov <victor.veldstra@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wow_srp = '0.5.0'
byteorder = { version = '1' }
async-std = { version = "*", features = ["attributes"] }
anyhow = { version = "*" }
dotenv = { version = "*" }
hex = { version = "0.4" }
wrath-auth-db = { path = "../databases/wrath-auth-db" }
time = { version = "0.3", features = ["macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
async-trait = "0.1"
byte = "0.2"
cmdparse = { version = "0.1" }
# Temporarily pointing at the git repo, until a new  wow_login_messages version is published with async support.
wow_login_messages = { version="0.2", features=["async-std"] }
