[package]
name = "wrath-authserver"
version = "0.1.0"
authors = ["victov <victor.veldstra@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wow_srp = '0.6.0'
byteorder = { version = '1' }
anyhow = { version = "*" }
dotenvy = { version = "*" }
hex = { version = "0.4" }
wrath-auth-db = { path = "../databases/wrath-auth-db" }
time = { version = "0.3", features = ["macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
async-trait = "0.1"
byte = "0.2"
cmdparse = { version = "0.1" }
wow_login_messages = { version="0.3", features=["async-std"] }
smol = "2.0.2"
smol-macros = "0.1.0"
macro_rules_attribute = "0.2.2"
async-io = "2.5.0"
