[package]
name = "wrath-worldserver"
version = "0.1.0"
authors = ["victov <victor.veldstra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="*", features=["attributes"] }
anyhow = { version = "*" }
podio = { version = "*" } 
sqlx = { version = "0.4.0-beta.1", features=["mysql"] }
dotenv = { version="*" }
rand = { version = "0.7" } 
num-bigint = { version = "0.3", features=["rand"] } 
num-traits = { version = "0.2.12" } 
rust-crypto = { version="0.2.36" } 
num_enum = { version="0.5.1" } 
