[package]
name = "wrath-worldserver"
version = "0.1.0"
authors = ["victov <victor.veldstra@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="*", features=["attributes"] }
async-trait = {version="0.1"}
anyhow = { version = "1.0" }
podio = { version = "0.2" } 
dotenv = { version="*" }
rand = { version = "0.8" } 
num-bigint = { version = "0.4", features=["rand"] } 
num-traits = { version = "0.2" } 
rust-crypto = { version="0.2" } 
num_enum = { version="0.5" } 
wrath-auth-db = { path="../databases/wrath-auth-db" }
wrath-realm-db = { path="../databases/wrath-realm-db" }
dbc = { path = "../databases/dbc" }
flate2 = { version="1.0" }
chrono = { version = "0.4" }
bit_field = { version = "0.10" }
async-ctrlc = {version="1.2", features=["termination"] }
time = { version = "0.3", features = ["macros"] }
tracing = {version="0.1"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rstar = { version = "0.9" }
hex = { version = "0.4" }
cmdparse = { version = "0.1" }
wow_world_messages = { path = "../../wow_messages/wow_world_messages", features=["wrath", "async-std"] }
wow_srp = { version = "0.5" }
