[package]
name = "wrath-auth-db"
version = "0.1.0"
authors = ["Victov <victor.veldstra@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="*", features=["attributes"] }
anyhow = { version = "1.0.32" }
sqlx = { version = "0.7", features=["mysql", "runtime-async-std", "tls-rustls"] }
sea-orm ={ version = "0.12", features=["sqlx-mysql", "runtime-async-std-rustls", "debug-print"] }
log = "0.4"